# Grape

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  colony.json  release-please-config.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml  release.yml
assets/: logo_16.rgba
docs/: docs.md
scripts/: README.md  setup-hooks-light.sh  setup-hooks.sh
src/: config.rs  eq.rs  lib.rs  library.rs  main.rs  notifications.rs  player.rs  playlist.rs  src.md
src/system_integration/: common.rs  linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
src/ui/: i18n.rs  message.rs  mod.rs  state.rs  style.rs
src/ui/app/: filters.rs  mod.rs  playback.rs  selection.rs  update.rs  view.rs
src/ui/app/preferences/: accessibility.rs  appearance.rs  audio.rs  general.rs  helpers.rs  mod.rs
src/ui/components/: albums_grid.rs  anchored_overlay.rs  artists_panel.rs  audio_settings.rs  folders_panel.rs  genres_panel.rs  mod.rs  player_bar.rs  playlist_view.rs  queue_view.rs  seek_area.rs  songs_panel.rs
tasks/roadmap/: roadmap.md
tests/: cache_tests.rs  metadata_online_tests.rs  player_tests.rs
